shmuel 2025-09-28 15:08:34+03:00 - build 895

1. LuaFAR: refactoring.

shmuel 2025-09-28 10:56:35+03:00 - build 894

1. LuaFAR: refactoring.

rohitab 2025-09-27 13:33:20+10:00 - build 893

1. gh-611: Enable win.GetFileTimes/win.SetFileTimes to get/set change time.

shmuel 2025-09-26 10:38:38+03:00 - build 892

1. LuaFAR: rename actl.Waitkey to actl.WaitKey

MZK 2025-09-11 21:46:54-04:00 - build 891

1. gh-948: Macro API to retrieve menu item extended data: Menu.GetItemExtendedData.

shmuel 2025-09-06 09:05:47+03:00 - build 890

1. LuaFAR: minor reformat in 3 files.

2. LuaFAR: fix crash during Polygon test on Far 3.0.6543.

shmuel 2025-08-22 18:26:47+03:00 - build 889

1. LuaFAR: correct build 888.

shmuel 2025-08-22 17:21:33+03:00 - build 888

1. LuaFAR: support returning Lua tables from Macro API.

shmuel 2025-08-19 17:35:24+03:00 - build 887

1. LuaFAR: refactoring.

shmuel 2025-08-18 21:31:53+03:00 - build 886

1. LuaFAR: refactoring.

shmuel 2025-07-26 20:39:15+03:00 - build 885

1. LuaFAR: minor refactoring.

shmuel 2025-06-22 12:51:43+03:00 - build 884

1. Changes to 883:
   - fix stack balance in win_WriteConsole
   - don't throw error in mf.printconsole
   - minor refactoring

johnd0e 2025-06-21 15:58:44+02:00 - build 883

1. LuaFAR: implement luaL_tolstring (from Lua 5.2..5.3) and make consistent use of it.

2. Improve non-string errors handling; apply __tostring to error object in a safe way.

3. Better errors reporting in win.WriteConsole / mf.printconsole.

shmuel 2025-06-18 13:19:43+03:00 - build 882

1. LuaFAR: add function far.GetPluginId().

johnd0e 2025-06-08 21:28:12+02:00 - build 881

1. Enhance message on moonscript macrofile loading to include error source filename.

2. Enhance detecting macro loading error source.

3. Fix edit position on moonscript parsing error.

shmuel 2025-05-27 23:16:21+03:00 - build 880

1. LuaFAR (far.Menu): refactoring.

shmuel 2025-05-27 13:23:29+03:00 - build 879
